// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component renders correctly 1`] = `
<div>
  <div
    class="MuiFormControl-root Checkbox-root-1"
  >
    <label
      class="MuiFormControlLabel-root"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-3 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-6"
            data-indeterminate="false"
            name="Test checkbox"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
      />
    </label>
  </div>
</div>
`;

exports[`Checkbox component renders custom error 1`] = `
<div
  class="MuiFormControl-root Checkbox-root-43"
>
  <label
    class="MuiFormControlLabel-root"
  >
    <span
      aria-disabled="false"
      class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-45 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
    >
      <span
        class="MuiIconButton-label"
      >
        <input
          class="PrivateSwitchBase-input-48"
          data-indeterminate="false"
          type="checkbox"
          value=""
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
          />
        </svg>
      </span>
      <span
        class="MuiTouchRipple-root"
      />
    </span>
    <span
      class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
    />
  </label>
  <p
    class="MuiFormHelperText-root Mui-error"
  >
    Custom Error Text
  </p>
</div>
`;

exports[`Checkbox component renders error 1`] = `
<div>
  <div
    class="Checkbox-asterisksDecorator-38"
  >
    <div
      class="MuiFormControl-root Checkbox-root-37"
    >
      <label
        class="MuiFormControlLabel-root Mui-disabled"
      >
        <span
          aria-disabled="true"
          class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-39 MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-disabled-41 Mui-disabled MuiIconButton-colorPrimary Mui-disabled Mui-disabled"
          tabindex="-1"
        >
          <span
            class="MuiIconButton-label"
          >
            <input
              class="PrivateSwitchBase-input-42"
              data-indeterminate="false"
              disabled=""
              name="Test checkbox"
              type="checkbox"
              value=""
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
              />
            </svg>
          </span>
        </span>
        <span
          class="MuiTypography-root MuiFormControlLabel-label Mui-disabled MuiTypography-body1"
        >
          test-label-2
        </span>
      </label>
      <p
        class="MuiFormHelperText-root Mui-disabled Mui-error"
      >
        required
      </p>
    </div>
  </div>
</div>
`;

exports[`Checkbox component renders with additional props 1`] = `
<div>
  <div
    class="MuiFormControl-root Checkbox-root-7"
  >
    <label
      class="MuiFormControlLabel-root"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-9 MuiCheckbox-root MuiCheckbox-colorPrimary test-classname MuiIconButton-colorPrimary"
        data-testid="test-id"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-12"
            data-indeterminate="false"
            name="Test checkbox"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
      />
    </label>
  </div>
</div>
`;

exports[`Checkbox component renders with disabled state 1`] = `
<div>
  <div
    class="MuiFormControl-root Checkbox-root-19"
  >
    <label
      class="MuiFormControlLabel-root Mui-disabled"
    >
      <span
        aria-disabled="true"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-21 MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-disabled-23 Mui-disabled MuiIconButton-colorPrimary Mui-disabled Mui-disabled"
        tabindex="-1"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-24"
            data-indeterminate="false"
            disabled=""
            name="Test checkbox"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label Mui-disabled MuiTypography-body1"
      >
        Send a copy of this message to my email address
      </span>
    </label>
  </div>
</div>
`;

exports[`Checkbox component renders with label 1`] = `
<div>
  <div
    class="MuiFormControl-root Checkbox-root-13"
  >
    <label
      class="MuiFormControlLabel-root"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-15 MuiCheckbox-root MuiCheckbox-colorPrimary MuiIconButton-colorPrimary"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            class="PrivateSwitchBase-input-18"
            data-indeterminate="false"
            name="Test checkbox"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
      >
        Send a copy of this message to my email address
      </span>
    </label>
  </div>
</div>
`;
